fix container being inflated by children with text-overflow ellipsis

--- a/app/index.scss
+++ b/app/index.scss
@@ -17,6 +17,8 @@ body {
   flex: 1;
   flex-direction: column;
 
+  max-width: 100%;
+
   color:#eeeeee;
   background: #161616;
 }
